# One-Billion-Row-Benchmark-Study

./: .gitignore  README.md  frst_bench.py  pyproject.toml
data/: cities_not_found.csv  cities_not_found_temperatures.csv  cities_temperatures.csv  cities_temperatures_final.csv  cities_temperatures_final_v2.csv  cities_temperatures_teste.csv  cities_temperatures_v3.csv  worldcities_teste.csv
one_billion_rows/: billion.sql  main.py
scr_python/: consolidate_temperatures.py  consolidate_temperatures_v2.py  create_measurements.py  extract_city_names.py.py  fetch_temperatures.py  fetch_temperatures_v2.py  fetch_temperatures_v3.py  new_cities.py  teste.py  teste2.py  worldcities_to_billion.py
scr_python/data/: cities_temperatures_teste.csv  worldcities_teste.csv
