[project]
name = "one-billion-row-benchmark-study"
version = "0.1.0"
description = "A Benchmark Study on Big Data"
authors = [
    {name = "cezar-andrade-dev",email = "cezar.andrade.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
